--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,18 @@
 .p1 {
-    color: red;
-    background-color: black;
+    color: white;
 }
 .p2 {
     text-align: center;
     font-size: 35px;
     font-style: italic;
     font-family: cursive;
+}
+.header {
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(160, 160, 160);
 }
 body {
     margin: 0;
@@ -21,5 +27,22 @@ body {
     align-items: center;
     display: flex;
     font-size: 35px;
-    font-style: italic;
+}
+
+.todo-item {
+    background-color: rgb(37, 37, 37);
+    color: white;
+    font-weight: normal;
+    font-size: 15px;
+    padding-left: 30px;
+    padding-right: 20px;
+    margin-bottom: 0;
+    display: flex;
+    align-items: center;
+    border: solid white;
+    border-width: 1px;
+}
+
+.divbg {
+    margin-top: 0px;
 }
